<resources>
    <string name="app_name">Get It Done</string>
    <string name="description_fab_content">Add new Task button</string>
    <string name="action_options">action_options</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_one_week_ago">1 week ago</string>
    <string name="text_weeks_ago">weeks ago</string>
    <string name="title_menu_search">Search</string>
    <string name="msg_update_task_successfully">Update task successful</string>
    <string name="msg_update_task_fail">Update task fail</string>
    <string name="msg_delete_task_successfully">Delete task successful</string>
    <string name="msg_delete_task_fail">Delete task fail</string>
    <string name="msg_completed_task_title">Completed tasks</string>
    <string name="title_add_to_my_day">Add to My Day</string>
    <string name="title_added_to_my_day">Added to My Day</string>
    <string name="title_add_time_reminder">Add time reminder</string>
    <string name="description_text_add_more_information">Add some more detail information</string>
    <string name="text_add_task_title">Enter task\'s title</string>
    <string name="text_my_day">My Day</string>
    <string name="text_important">Important</string>
    <string name="text_add_new_task_list">Add new Task List</string>
    <string name="text_done">Done</string>
    <string name="title_add_new_list">Add new List</string>
    <string name="title_rename_list">Rename List</string>
    <string name="msg_add_new_list_successfully">Add new list successful</string>
    <string name="msg_add_new_list_fail">Add new list fail</string>
    <string name="msg_title_empty">Title should not be empty</string>
    <string name="text_save">Save</string>
    <string name="text_add_new_task">New thing to do</string>
    <string name="text_add_description">Add more information</string>
    <string name="msg_add_new_task_fail">Add new task fail</string>
    <string name="tag_color_gray">#607D8B</string>
    <string name="tag_color_green">#4CAF50</string>
    <string name="tag_color_cyan">#00BCD4</string>
    <string name="tag_color_lime">#CDDC39</string>
    <string name="tag_color_orange">#FFC107</string>
    <string name="tag_color_red">#F44336</string>
    <string name="tag_color_purple">#673AB7</string>
    <string name="msg_search_hint">Search Task</string>
    <string name="text_sort_by">Sort by</string>
    <string name="rename_list">Rename list</string>
    <string name="text_delete_list">Delete list</string>
    <string name="text_delete_all_completed_task">Delete all completed tasks</string>
    <string name="text_select_theme">Theme</string>
    <string name="text_can_not_delete_default_list">Can not delete default list</string>
    <string name="text_light_theme">Light</string>
    <string name="msg_delete_list_successful">Delete list successful</string>
    <string name="msg_delete_list_fail">Delete list fail</string>
    <string name="msg_delete_completed_tasks_successful">Delete completed tasks successful</string>
    <string name="msg_delete_completed_tasks_fail">Delete completed tasks fail</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="msg_no_task">Good job! You\'ve done everything</string>
</resources>
