<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@null"
        android:hint="@string/text_add_new_task"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@null"
        android:hint="@string/text_add_description"
        android:inputType="text"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <TextView
        android:id="@+id/textDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/rounded_corner"
        android:drawableEnd="@drawable/ic_close"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <ImageView
        android:id="@+id/imageDatePicker"
        style="@style/AppTheme.ItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30"
        android:src="@drawable/ic_date"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDatePicker"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imageDatePicker"
        app:layout_constraintStart_toEndOf="@+id/imageDatePicker"
        app:layout_constraintTop_toTopOf="@id/imageDatePicker">

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_gray"
            app:cardBackgroundColor="@color/colorGray"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_green"
            app:cardBackgroundColor="@color/colorGreen"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_cyan"
            app:cardBackgroundColor="@color/colorCyan"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_lime"
            app:cardBackgroundColor="@color/colorLime"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_orange"
            app:cardBackgroundColor="@color/colorOrange"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_red"
            app:cardBackgroundColor="@color/colorRed"
            app:cardCornerRadius="@dimen/dp_24" />

        <androidx.cardview.widget.CardView
            style="@style/AppTheme.ItemView"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_margin="@dimen/dp_4"
            android:tag="@string/tag_color_purple"
            app:cardBackgroundColor="@color/colorPurple"
            app:cardCornerRadius="@dimen/dp_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/buttonSave"
        style="@style/AppTheme.ItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_15"
        android:text="@string/text_save"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/imageDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDatePicker" />
</androidx.constraintlayout.widget.ConstraintLayout>
