<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMyDay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_15"
        android:drawableStart="@drawable/ic_my_day"
        android:drawablePadding="@dimen/dp_15"
        android:drawableTint="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/text_my_day"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textImportant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_15"
        android:drawableStart="@drawable/ic_star_off"
        android:drawablePadding="@dimen/dp_15"
        android:gravity="center_vertical"
        android:text="@string/text_important"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMyDay" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/px_1"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textImportant" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTaskLists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/px_1"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTaskLists" />
    
    <TextView
        android:id="@+id/textAddNewTaskList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_15"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="@dimen/dp_15"
        android:drawableTint="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/text_add_new_task_list"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTaskLists" />

</androidx.constraintlayout.widget.ConstraintLayout>
